--- a/404.html
+++ b/404.html
@@ -12,6 +12,6 @@
 </html>
 <script>
     function PageRedirect() {
-        location.replace("https://dishant-aarak.web.app")
+        location.replace("https://omkarlhr9595.github.io/Classroom")
     }
 </script>
